--- a/app/src/main/res/layout/single_chat_layout.xml
+++ b/app/src/main/res/layout/single_chat_layout.xml
@@ -1,5 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="@dimen/single_chat_preview"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/single_chat_preview"/>
+    >
+
+
+    <ImageView
+        android:id="@+id/profilePic"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:padding="@dimen/singleChatUniversalPadding"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <TableLayout
+        android:layout_weight="4"
+        android:stretchColumns="0"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:padding="@dimen/singleChatUniversalPadding"
+        >
+
+        <TableRow android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/userNameTextBoxPreview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|start"
+                android:text="@string/placeholder"
+                android:textSize="@dimen/userNameFontSize" />
+
+            <TextView
+                android:id="@+id/messageCounter"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="end|center"
+                android:textSize="@dimen/messageCounterFontSize"
+                android:text="99"
+                android:paddingLeft="@dimen/singleChatUniversalPadding"
+                android:paddingRight="@dimen/singleChatUniversalPadding"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            >
+
+            <TextView
+                android:id="@+id/lastMessagePreview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingStart="@dimen/singleChatUniversalPadding"
+                android:paddingEnd="@dimen/singleChatUniversalPadding"
+                android:gravity="start|center"
+                android:text="@string/placeholder"
+                android:textSize="@dimen/msgPreviewFontSize" />
+
+            <TextView
+                android:id="@+id/lastMessageTime"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="end|center"
+                android:text="00:00"
+                android:textSize="@dimen/msgPreviewFontSize"
+                android:paddingLeft="@dimen/singleChatUniversalPadding"
+                android:paddingRight="@dimen/singleChatUniversalPadding"/>
+
+        </TableRow>
+
+    </TableLayout>
+</LinearLayout>
+
+
