--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -21,43 +21,44 @@
 
                 android:id="@+id/chat_toolbar"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:padding="@dimen/singleChatUniversalPadding"
                 android:layout_gravity="center|start"
-                app:srcCompat="@mipmap/ic_app" />
+                android:layout_weight="2"
+                android:padding="@dimen/single_chat_universal_padding"
+                app:srcCompat="@mipmap/ic_app"
+                android:contentDescription="User Profile Picture"/>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="8"
                 android:layout_gravity="start|center"
+                android:layout_weight="8"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/chat_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:paddingLeft="@dimen/singleChatUniversalPadding"
-                    android:paddingRight="@dimen/singleChatUniversalPadding"
-                    />
+                    android:paddingLeft="@dimen/single_chat_universal_padding"
+                    android:paddingRight="@dimen/single_chat_universal_padding"
+                    android:textColor="@color/usernameTextColor"
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/chat_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:paddingLeft="@dimen/singleChatUniversalPadding"
-                    android:paddingRight="@dimen/singleChatUniversalPadding"
-                    />
+                    android:paddingLeft="@dimen/single_chat_universal_padding"
+                    android:paddingRight="@dimen/single_chat_universal_padding"
+                    android:textColor="@color/userEmailTextColor"
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
@@ -67,21 +68,47 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <FrameLayout
             android:id="@+id/messagelist_container"
-            android:text="CHAT"
-            android:gravity="center"
-            android:layout_height="0dp"
-            android:layout_weight="10"
-            android:layout_width="match_parent"/>
-
-        <EditText
-            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            android:background="@color/defalutChatBackground"
+            android:gravity="center"
+            app:layout_constraintBottom_toTopOf="@+id/message_box_container"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <FrameLayout
+            android:id="@+id/message_box_container"
+            android:layout_width="match_parent"
+            android:background="@color/colorPrimary"
+            android:layout_gravity="bottom"
+            android:layout_height="40dp"
+            android:paddingTop="@dimen/send_message_box_vertical_padding"
+            android:paddingBottom="@dimen/send_message_box_vertical_padding"
 
-    </LinearLayout>
+            android:elevation="3dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <EditText
+                android:id="@+id/message_box"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:gravity="center|start"
+                android:hint="@string/messageHint"
+                android:inputType="textPersonName"
+                android:textColor="@color/messageTextColor"
+                android:layout_margin="5dp"
+                android:textSize="@dimen/send_message_box_text_size"
+                android:textColorHint="@color/send_message_box_hint_color"
+                android:textCursorDrawable="@drawable/textview_cursor"/>
+        </FrameLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
+
