--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:background="@drawable/bg_message"
-        android:padding="10dp"
+        android:padding="5dp"
         android:orientation="vertical"
-        android:layout_gravity="start"
-        >
+        android:layout_gravity="start">      <!--to change programmatically-->
+        <!--margins are also added programmatically-->
 
         <TextView
             android:id="@+id/message_text"
@@ -23,7 +23,8 @@
             android:layout_gravity="start"
             android:layout_marginEnd="30dp"
             android:layout_marginStart="0dp"
-            android:textSize="16sp"
+            android:textSize="@dimen/message_text_font_size"
+            android:textColor="@color/messageTextColor"
             />
 
         <TextView
@@ -32,10 +33,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_weight="1"
-            android:textSize="12sp"
+            android:textSize="@dimen/message_date_font_size"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="0dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="5dp"
+            android:textColor="@color/messageDateColor"/>
 
     </LinearLayout>
 
