--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,17 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">60dp</dimen>
     <dimen name="single_chat_preview">80dp</dimen>
-    <dimen name="userNameFontSize">20sp</dimen>
-    <dimen name="messageCounterFontSize">15sp</dimen>
-    <dimen name="msgPreviewFontSize">14sp</dimen>
-    <dimen name="singleChatUniversalPadding">5dp</dimen>
+    <dimen name="username_font_size">20sp</dimen>
+    <dimen name="message_counter_font_size">15sp</dimen>
+    <dimen name="msg_preview_font_size">14sp</dimen>
+    <dimen name="single_chat_universal_padding">5dp</dimen>
+
+    <dimen name="message_text_font_size">16sp</dimen>
+    <dimen name="message_date_font_size">12sp</dimen>
+    <dimen name="message_back_margin">10dp</dimen>
+    <dimen name="message_front_margin">50dp</dimen>
+    <dimen name="message_vertical_margin">1dp</dimen>
+    <dimen name="send_message_box_vertical_padding">5dp</dimen>
+    <dimen name="send_message_box_text_size">18sp</dimen>
+
 </resources>
