Fixed regex and invalid icon

--- a/app/src/main/res/drawable/ic_callee_send_img_invalid.xml
+++ b/app/src/main/res/drawable/ic_callee_send_img_invalid.xml
@@ -25,7 +25,7 @@
       android:pathData="M12.021,10.6505m-7.6218,0a7.6218,7.6218 0,1 1,15.2435 0a7.6218,7.6218 0,1 1,-15.2435 0"
       android:strokeAlpha="1"
       android:strokeLineJoin="bevel"
-      android:strokeWidth="0.53947037"
+      android:strokeWidth="0.69"
       android:fillColor="#ffffff"
       android:strokeColor="#fe9c08"
       android:fillAlpha="1"
