--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,12 +7,13 @@
     <dimen name="msg_preview_font_size">14sp</dimen>
     <dimen name="single_chat_universal_padding">5dp</dimen>
 
-    <dimen name="message_text_font_size">16sp</dimen>
+    <dimen name="message_text_font_size">15sp</dimen>
     <dimen name="message_date_font_size">12sp</dimen>
     <dimen name="message_back_margin">10dp</dimen>
     <dimen name="message_front_margin">50dp</dimen>
     <dimen name="message_vertical_margin">1dp</dimen>
     <dimen name="send_message_box_vertical_padding">5dp</dimen>
     <dimen name="send_message_box_text_size">18sp</dimen>
+    <dimen name="single_line_min_height">34sp</dimen>
 
 </resources>
