--- a/app/src/main/res/drawable/ic_app_foreground.xml
+++ b/app/src/main/res/drawable/ic_app_foreground.xml
@@ -3,24 +3,25 @@
     android:height="108dp"
     android:viewportWidth="51.87908"
     android:viewportHeight="51.879086">
-  <group android:translateX="12.710375"
-      android:translateY="12.710376">
-    <path
-        android:pathData="m22.4896,1.5245 l-9.525,0c0,0 -4.6423,-0.302 -8.479,3.9554 0,0 -2.9303,2.8893 -2.963,7.7519 0,0 -0.243,4.3371 3.1207,7.9638 0,0 2.955,3.6765 8.5859,3.7436 0,0 6.104,0.3562 9.8881,-5.3992 0,0 1.8501,-2.6296 1.8185,-6.3081l0,-9.2631c0,0 -0.002,-2.4442 -2.4462,-2.4442z"
-        android:strokeAlpha="1"
-        android:strokeLineJoin="miter"
-        android:strokeWidth="0.79"
-        android:fillColor="#ffffff"
-        android:strokeColor="#fe9c08"
-        android:fillAlpha="1"
-        android:strokeLineCap="butt"/>
-    <path
-        android:pathData="m18.5344,8.2484c0,0 -1.8745,-2.2903 -5.3226,-2.2983 0,0 -3.0554,-0.188 -5.4444,2.4619 0,0 -1.8246,1.7983 -1.845,4.8249 0,0 -0.1513,2.6995 1.9432,4.9568 0,0 1.84,2.2883 5.3463,2.3301 0,0 3.8008,0.2217 6.1571,-3.3606 0,0 1.152,-1.6367 1.1323,-3.9262"
-        android:strokeAlpha="1"
-        android:strokeLineJoin="bevel"
-        android:strokeWidth="5.42090797"
-        android:fillColor="#00000000"
-        android:strokeColor="#fe9c08"
-        android:strokeLineCap="butt"/>
-  </group>
+    <group
+        android:translateX="12.710375"
+        android:translateY="12.710376">
+        <path
+            android:fillAlpha="1"
+            android:fillColor="#ffffff"
+            android:pathData="m22.4896,1.5245 l-9.525,0c0,0 -4.6423,-0.302 -8.479,3.9554 0,0 -2.9303,2.8893 -2.963,7.7519 0,0 -0.243,4.3371 3.1207,7.9638 0,0 2.955,3.6765 8.5859,3.7436 0,0 6.104,0.3562 9.8881,-5.3992 0,0 1.8501,-2.6296 1.8185,-6.3081l0,-9.2631c0,0 -0.002,-2.4442 -2.4462,-2.4442z"
+            android:strokeWidth="0.79"
+            android:strokeAlpha="1"
+            android:strokeColor="#fe9c08"
+            android:strokeLineCap="butt"
+            android:strokeLineJoin="miter" />
+        <path
+            android:fillColor="#00000000"
+            android:pathData="m18.5344,8.2484c0,0 -1.8745,-2.2903 -5.3226,-2.2983 0,0 -3.0554,-0.188 -5.4444,2.4619 0,0 -1.8246,1.7983 -1.845,4.8249 0,0 -0.1513,2.6995 1.9432,4.9568 0,0 1.84,2.2883 5.3463,2.3301 0,0 3.8008,0.2217 6.1571,-3.3606 0,0 1.152,-1.6367 1.1323,-3.9262"
+            android:strokeWidth="5.42090797"
+            android:strokeAlpha="1"
+            android:strokeColor="#fe9c08"
+            android:strokeLineCap="butt"
+            android:strokeLineJoin="bevel" />
+    </group>
 </vector>
