--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -31,9 +31,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|start"
                 android:layout_weight="2"
+                android:contentDescription="User Profile Picture"
                 android:padding="@dimen/single_chat_universal_padding"
-                app:srcCompat="@mipmap/ic_app"
-                android:contentDescription="User Profile Picture"/>
+                app:srcCompat="@mipmap/ic_app" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -84,44 +84,43 @@
         <LinearLayout
             android:id="@+id/message_box_container"
             android:layout_width="match_parent"
-            android:background="@color/colorPrimary"
-            android:layout_gravity="bottom"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/send_message_box_vertical_padding"
-            android:paddingBottom="@dimen/send_message_box_vertical_padding"
-
+            android:layout_gravity="bottom"
+            android:background="@color/colorPrimary"
             android:elevation="3dp"
             android:orientation="horizontal"
+
+            android:paddingTop="@dimen/send_message_box_vertical_padding"
+            android:paddingBottom="@dimen/send_message_box_vertical_padding"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <EditText
                 android:id="@+id/message_box"
                 android:layout_width="0dp"
-                android:layout_weight="6"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/single_line_min_height"
-                android:singleLine="false"
-                android:inputType="textMultiLine"
-                android:maxLines="5"
-                android:imeOptions="flagNoExtractUi"
+                android:layout_weight="6"
                 android:background="@null"
                 android:gravity="center|start"
                 android:hint="@string/messageHint"
-                android:textColor="@color/messageTextColor"
+                android:imeOptions="flagNoExtractUi"
+                android:inputType="textMultiLine"
+                android:maxLines="5"
+                android:minHeight="@dimen/single_line_min_height"
                 android:padding="5dp"
-                android:textSize="@dimen/send_message_box_text_size"
+                android:singleLine="false"
+                android:textColor="@color/messageTextColor"
                 android:textColorHint="@color/send_message_box_hint_color"
-                android:textCursorDrawable="@drawable/textview_cursor"/>
+                android:textCursorDrawable="@drawable/textview_cursor"
+                android:textSize="@dimen/send_message_box_text_size" />
 
             <ImageView
                 android:id="@+id/send_message_button"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="@dimen/single_line_min_height"
-                app:srcCompat="@drawable/ic_send_icon"
                 android:layout_gravity="bottom|end"
-                >
-            </ImageView>
+                android:layout_weight="1"
+                android:contentDescription="Send button"
+                app:srcCompat="@drawable/ic_send_icon" />
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
