--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@color/colorPrimary"
-            android:elevation="3dp"
+            android:elevation="5dp"
             android:orientation="horizontal"
 
             android:paddingTop="@dimen/send_message_box_vertical_padding"
@@ -111,7 +111,8 @@
                 android:textColor="@color/messageTextColor"
                 android:textColorHint="@color/send_message_box_hint_color"
                 android:textCursorDrawable="@drawable/textview_cursor"
-                android:textSize="@dimen/send_message_box_text_size" />
+                android:textSize="@dimen/send_message_box_text_size"
+                />
 
             <ImageView
                 android:id="@+id/send_message_button"
