--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -2,10 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.callee.calleeclient.activities.HomeActivity">
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="ifRoom"
-        android:icon="@android:drawable/btn_star_big_off"/>
+        app:showAsAction="never"
+        android:icon="@android:drawable/ic_menu_preferences"
+        />
 </menu>
