--- a/app/src/main/res/layout/auth_fragment.xml
+++ b/app/src/main/res/layout/auth_fragment.xml
@@ -1,75 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/auth_textview1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:textAlignment="center"
-        android:text="@string/auth_text1"
-        android:textColor="@color/colorPrimaryDark"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
+        android:text="@string/auth_text1"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/auth_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textAlignment="center"
-        android:textSize="60sp"
-        android:hint=""
-        android:backgroundTint="@color/colorAccent"
-        android:maxLength="6"
-        android:textCursorDrawable="@null"
-        android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="50dp"
+        android:backgroundTint="@color/colorAccent"
+        android:ems="10"
+        android:hint=""
+        android:inputType="number"
+        android:maxLength="6"
+        android:textAlignment="center"
+        android:textCursorDrawable="@null"
+        android:textSize="60sp"
         app:layout_constraintTop_toBottomOf="@+id/auth_textview1" />
 
     <LinearLayout
         android:id="@+id/auth_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="end"
         android:clickable="true"
         android:focusable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="end"
+        android:orientation="horizontal"
         android:padding="20dp"
-        android:orientation="horizontal">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="5"
             android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:background="@null"
+            android:includeFontPadding="false"
+            android:lines="1"
             android:padding="5dp"
             android:text="@string/auth_confirm"
-            android:lines="1"
             android:textAlignment="gravity"
-            android:background="@null"
-            android:textSize="20sp"
             android:textColor="@color/colorPrimaryDark"
-            android:includeFontPadding="false"
-            />
+            android:textSize="20sp" />
+
         <FrameLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
-            >
+            android:layout_weight="1">
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                app:srcCompat="@drawable/ic_right_arrow"
-                android:contentDescription="right arrow"/>
+                android:contentDescription="right arrow"
+                app:srcCompat="@drawable/ic_right_arrow" />
         </FrameLayout>
     </LinearLayout>
 
