--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -70,7 +70,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <FrameLayout
             android:id="@+id/messagelist_container"
@@ -111,8 +112,7 @@
                 android:textColor="@color/messageTextColor"
                 android:textColorHint="@color/send_message_box_hint_color"
                 android:textCursorDrawable="@drawable/textview_cursor"
-                android:textSize="@dimen/send_message_box_text_size"
-                />
+                android:textSize="@dimen/send_message_box_text_size" />
 
             <ImageView
                 android:id="@+id/send_message_button"
@@ -125,6 +125,5 @@
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
-
 </LinearLayout>
 
