--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -5,9 +5,8 @@
 
     <item
         android:id="@+id/action_settings"
+        android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never"
-        android:icon="@android:drawable/ic_menu_preferences"
-        />
+        app:showAsAction="never" />
 </menu>
